Fix overflow

--- a/src/sass/sections/_facebook.scss
+++ b/src/sass/sections/_facebook.scss
@@ -88,3 +88,7 @@
 		color: $dark;
 	}
 }
+
+.wrap-fb{
+	overflow: hidden;
+}
